[package]
name = "stwo-samples"
version = "0.1.0"
edition = "2021"

[dependencies]
stwo-prover = { git = "https://github.com/starkware-libs/stwo", branch = "dev" }
blake2 = "0.10.6"
blake3 = "1.5.0"
educe = "0.5.0"
hex = "0.4.3"
itertools = "0.12.0"
num-traits = "0.2.17"
thiserror = "1.0.56"
bytemuck = "1.14.3"
tracing = "0.1.40"
